--- a/ex009/index.html
+++ b/ex009/index.html
@@ -4,33 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outras formatações</title>
+    <title>Listas</title>
 </head>
 <body>
-    <h1>Outras Formatações</h1>
-    <h2>Código-fonte/ Pré-formatação</h2>
-    <p>O comando <code>document.getElementById('teste')</code> é escrito em liguagem JavaScript</p>
-    <pre>
-        <code>
-    num = int(input('digite um numero'))
-    if num %2 == 0:
-        print(f'0 numero {num} é PAR')
-    else:
-        print(f'0 numero {num}é ÍMPAR')
-    print('Fim do programa')
-        </code>
-    </pre>
-    <h2>Citações simples</h2>
-    <p>Como diria o pai de um amigo: <q>o cumputador é um burro muito rápido</q></p>
-    <h2>Citações completas</h2>
-    <p>Segundo O autor do livro, no seu livro de HTML para leigos</p>
-    <blockquote cite="https://books.google.com.br/books?id=LZ1QBAAAQBAJ&newbks=1&newbks_redir=0&printsec=frontcover&dq=HTML+para+leigos&hl=pt-PT&redir_esc=y#v=onepage&q&f=false">
-        <h2>Abreviações</h2>
-        O google chrome é um dos navegadores mais popular da internet e tem como principal caractérisica a sua velocidade de navegação.
-        <p>estou estudando <abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>, Estou adorando</p>
-        <h2>Texto invertido</h2>
-        <p><bdo dir="ltr">Estou aprendendo a criar coisas em HTML.</bdo></p>
-        
-    </blockquote>
+    <h1>Trabalhando com listas</h1>
+    <h2>Listas Ordenadas</h2>
+    <ol type="i"> <!-- 1 A a I i -->
+        <li>Acordar</li>
+        <li>Ligar para o joão</li>
+        <li>Tomar café</li>
+        <li>Escovar os dentes</li>
+        <li>Ir para a faculdade</li>
+        <li>Almoçar</li>
+        <li>Ir para o Trabalho</li>
+        <li>Voltar para casa</li>
+        <li>Jantar</li>
+        <li>Dormir</li>
+    </ol>
+    <h2>Listas não Ordenadas</h2>
+    <ul type="square"> <!-- disc circle square -->
+        <li>Pão</li>
+        <li>Leite</li>
+        <li>Tomate</li>
+        <li>Alface</li>
+        <li>Manteiga</li>
+        <li>Arroz</li>
+        <li>Feijão</li>
+    </ul>
+    <h2>Minhas Linguagens Favoritas</h2>
+    <ol>
+        <li>Antigas</li>
+        <ol type="a">
+            <li>Clipper</li>
+            <li>Visual Basic</li>
+            <li>Fortran</li>
+            <li>Delphi</li>
+        </ol>
+        <li>Novas</li>
+        <ol type="a" start="5">
+            <li>PHP</li>
+            <li>Python</li>
+            <li>JavaScript</li>
+            <li>Kotlin</li>
+        </ol>
+    </ol>
+    <h2>Meus jogos favotiros</h2>
+    <ol>
+        <li>NES</li>
+        <ul type="Square">
+            <li>Mario Bros</li>
+            <ul type="circle">
+                <li>Mario bros 3</li>
+                <li>Mario: Lost Levels</li>
+            </ul>
+            <li>Ninja Gaiden</li>
+        </ul>
+        <li>SNES</li>
+        <ul type="Square">
+            <li>Mario</li>
+            <li>Donkey Kong</li>
+        </ul>
+        <li>PlayStation</li>
+        <ul type="Square">
+            <li>Final Fantasy</li>
+            <li>Castlevania</li>
+        </ol>
+    </ol>
+    <h2>Lista de Definições</h2>
+    <dl>
+        <dt>HTML</dt>
+        <dd>Linguagem de marcação para a criação do conteudo de um site.</dd>
+        <dt>CSS</dt>
+        <dd>Linguagem de marcação para a criação do design de um site.</dd>
+        <dt>JavaScript</dt>
+        <dd>Linguagem de programação para a criação de interatividade de um site.</dd>
+    </dl>
 </body>
 </html>
