--- a/ex010/index.html
+++ b/ex010/index.html
@@ -10,8 +10,15 @@
     <h1>Usando links externos</h1>
     <p>Você pode acessar o meu <a href="https://gustavoguanabara.github.io/" target="_blank" rel="external">repositório público no Github</a></p>
     <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external">canal gratuito no youtube</a></p>
-    <h2>Usando Links Internos</h2>
+
+    <h1>Usando Links Internos</h1>
     <p>Esta é a primeira página do site. Se você quiser, pode acessar também a minha <a href="pag002.html" rel="next" target="_self">segunda página</a></p>
     <p>Você também pode acessar a nossa <a href="noticias/pag003.html" rel="next" target="_self">página de notícias</a></p>
+    
+    <h1>Links para download</h1>
+    <ul>
+        <li><a href="Livro/10 - Ligações em toda parte.pdf" download="10 - Ligações em toda parte.pdf" type="application/pdf">Baixar o livro em PDF</a></li>
+        <li><a href="Livro/10 - Ligações em toda parte.zip" download="10 - Ligaçoes em toda parte.zip" type="application/zip">Livro compactado em ZIP</a></li>
+    </ul>
 </body>
 </html>
